public/submissions/Logs/demo2/[1][17487040890][demo2][abc123][A].cpp.log
Compile Error
[1][17487040890][demo2][abc123][A].cpp:1:1: error: 'mjnkjnj' does not name a type
 mjnkjnj
 ^~~~~~~
